- Feature: [#6181] Map generator now allows adjusting random terrain and tree placement in Simplex Noise tab.
- Feature: [#6235] Add drawing debug option for showing visuals when and where blocks of the screen are painted.
- Feature: [#6292] Allow building queue lines in the Scenario Editor.
- Feature: [#6325] Allow using g1.dat from RCT Classic.
- Feature: Allow using object files from RCT Classic.
- Fix: [#816] In the map window, there are more peeps flickering than there are selected (original bug).
- Fix: [#1833, #4937, #6138] 'Too low!' warning when building rides and shops on the lowest land level (original bug).
- Fix: [#4991] Inverted helices can be built on the Lay Down RC, but are not drawn
- Fix: [#5417] Hacked Crooked House tracked rides do not dispatch vehicles.
- Fix: [#5445] Patrol area not imported from RCT1 saves and scenarios.
- Fix: [#5788] Empty scenario names cause invisible entries in scenario list
- Fix: [#6101] Rides remain in ride list window briefly after demolition.
- Fix: [#6115] Random title screen music not random on launch
- Fix: [#6133] Construction rights not shown after selecting buy mode.
- Fix: [#6188] Viewports not being clipped properly when zoomed out in OpenGL mode.
- Fix: [#6193] All rings in Space Rings use the same secondary colour
- Fix: [#6198] You cannot cancel RCT1 directory selection
- Fix: [#6202] Guests can break occupied benches.
- Fix: [#6271] Wrong booster speed tooltip text
- Fix: [#6320] Crash when CSS1.DAT is absent
- Fix: Infinite loop when removing scenery elements with >127 base height.
- Fix: Ghosting of transparent map elements when the viewport is moved in OpenGL mode.
- Improved: [#6186] Transparent menu items now draw properly in OpenGL mode.
- Improved: [#6218] Speed up game start up time by saving scenario index to file.
- Improved: Load/save window now refreshes list if native file dialog is closed/cancelled

0.1.1 (2017-08-09)
------------------------------------------------------------------------