@@ -6,6 +6,7 @@
 - Feature: [#6235] Add drawing debug option for showing visuals when and where blocks of the screen are painted.
 - Feature: [#6292] Allow building queue lines in the Scenario Editor.
 - Feature: [#6325] Allow using g1.dat from RCT Classic.
+- Feature: [#6353] Show custom RCT1 scenarios in New Scenario window.
 - Feature: Allow using object files from RCT Classic.
 - Fix: [#816] In the map window, there are more peeps flickering than there are selected (original bug).
 - Fix: [#1833, #4937, #6138] 'Too low!' warning when building rides and shops on the lowest land level (original bug).
